src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Tentative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed/Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-opened</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TaxExempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_ExemptId__c</fullName>
        <label>Tax Exempt Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Form_Received_Date__c</fullName>
        <label>Tax Form Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tax_Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Form Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <label>Terms &amp; Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Adjustments__c</fullName>
        <formula>Additions__c + Adjustments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Beverage_Liquor_Revenue__c</fullName>
        <formula>Beverage_Liquor_Amount__c  +  Beverage_Liquor_Service_Charges__c  +  Beverage_Liquor_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Beverage &amp; Liquor Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Beverage_Revenue__c</fullName>
        <formula>Beverage_Amount__c + Beverage_Service_Charges__c + Beverage_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Beverage Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Charge_Amount__c</fullName>
        <label>Total Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Food_Beverage_Revenue__c</fullName>
        <formula>Food_Beverage_Amount__c  +  Food_Beverage_Service_Charges__c  +  Food_Beverage_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Food &amp; Beverage Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Food_Revenue__c</fullName>
        <formula>Food_Amount__c + Food_Service_Charges__c + Food_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Food Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gratuity_Revenue__c</fullName>
        <formula>Gratuity_Amount__c + Gratuity_Service_Charges__c + Gratuity_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gratuity Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Labor_Revenue__c</fullName>
        <formula>Labor_Amount__c + Labor_Service_Charges__c + Labor_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Labor Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Liquor_Revenue__c</fullName>
        <formula>Liquor_Amount__c + Liquor_Service_Charges__c + Liquor_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Liquor Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Miscellaneous_Fees__c</fullName>
        <formula>Miscellaneous_Fees_Amount__c + Miscellaneous_Fees_Service_Charges__c + Miscellaneous_Fees_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Miscellaneous Fees Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Revenue__c</fullName>
        <formula>Other_Amount__c + Other_Service_Charges__c + Other_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Other Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rental_Revenue__c</fullName>
        <formula>Rental_Amount__c + Rental_Service_Charges__c + Rental_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Rental Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Service_Charges__c</fullName>
        <label>Total Service Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked then none of the tax will be calculated on reservation</description>
        <label>Total Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Taxes__c</fullName>
        <description>field to show total taxes on reservation</description>
        <label>Total Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Special Interest Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Club Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lectures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics/Squash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happy Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Princeton Connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lessons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Trainer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Location__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Sponsoring_Customer__c</columns>
        <columns>Parent_Reservation__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Banquets</fullName>
        <columns>NAME</columns>
        <columns>BEO__c</columns>
        <columns>Status__c</columns>
        <columns>Deposit_Amount__c</columns>
        <columns>Deposit_Received__c</columns>
        <columns>Deposit_Received_Date__c</columns>
        <columns>Deposit_Required__c</columns>
        <columns>Sponsoring_Customer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event__c.Sponsored_Event,Event__c.Sponsored_Event_Child</value>
        </filters>
        <label>Banquets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <recordTypes>
        <fullName>Reserved</fullName>
        <active>true</active>
        <label>Reserved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsored_Event</fullName>
        <active>true</active>
        <label>Sponsored Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsored_Event_Child</fullName>
        <active>true</active>
        <label>Sponsored Event - Child</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cancellation_Fee_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name==&apos;Member Sponsored Event&apos; &amp;&amp; TEXT(Status__c)==&apos;Cancelled&apos; &amp;&amp; ISBLANK(Cancellation_Fee__c)</errorConditionFormula>
        <errorDisplayField>Cancellation_Fee__c</errorDisplayField>
        <errorMessage>You must have a cancellation fee, if the Status is Cancelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Posted_Status</fullName>
        <active>false</active>
        <errorConditionFormula>OR((ISCHANGED(Status__c) &amp;&amp; ISPICKVAL( PRIORVALUE(Status__c) , &quot;Closed/Posted&quot;) &amp;&amp; Text(Status__c) &lt;&gt; &quot;Re-opened&quot;), (ISCHANGED(Status__c) &amp;&amp; ISPICKVAL( PRIORVALUE(Status__c) , &quot;Re-opened&quot;) &amp;&amp; Text(Status__c) &lt;&gt; &quot;Closed/Posted&quot;), (ISCHANGED(Status__c) &amp;&amp; ISPICKVAL( PRIORVALUE(Status__c) , &quot;Cancelled&quot;) &amp;&amp; Text(Status__c) &lt;&gt; &quot;Cancelled&quot;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Once Status is set to Closed/Posted, you may only set it back to Reopened. If Status is Reopened you may only return it to Closed/Posted. If Status is set to Cancelled, the Status may not be changed again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Manually_Closed_Status</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISCHANGED(Status_Change__c)) &amp;&amp; 
ISCHANGED(Status__c) &amp;&amp; TEXT(Status__c)==&apos;Closed/Posted&apos;</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You can&apos;t manually change the status from anything to Closed/Posted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Cancellation_Reason_is_Required</fullName>
        <active>true</active>
        <description>This rule makes the Other Cancellation reason field required if the picklist value selected in the Cancellation Reason field is set to other.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL( Cancellation_Reason__c , &quot;Other&quot;), Other_Cancellation_Reason__c = &quot;&quot;),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Other_Cancellation_Reason__c</errorDisplayField>
        <errorMessage>Other Cancellation Reason is required if Other is selected as the reason for the cancellation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_has_to_be_before_End_Time</fullName>
        <active>true</active>
        <errorConditionFormula>StartTime__c &gt;=  EndTime__c</errorConditionFormula>
        <errorMessage>Start Time must be before the End Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_rule_for_Uncheck_tax_exempt</fullName>
        <active>true</active>
        <description>validate not to check/uncheck the tax exempt checkbox once its checked after reopening the event</description>
        <errorConditionFormula>AND(NOT( ISBLANK( Post_Close_Date_Time__c )), ISCHANGED(Total_Tax_Exempt__c))</errorConditionFormula>
        <errorMessage>Cannot Check/ Un-Check Tax Exempt Box for Closed/Posted Events</errorMessage>
    </validationRules>
</CustomObject>